# sanakirja

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  sanakirja.html  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree  sanakirja.doctree
_sources/: index.rst.txt
docs/: conf.py  sanakirja.rst
src/: fi-flash.py  fi-quiz.py  fi-write.py  fi.py  fi_lib.py
src/sanakirja/: __init__.py  api.py  fi-flash.py  fi-quiz.py  fi-write.py  fi.py  sanakirja.py
